# OpenMouseGesture

./: .gitignore  CHANGELOG.md  PROJECT.md  README.md  package.json  report.md
artifacts/: 20260703_ascii_strings.txt  20260703_unicode_strings.txt  GestureHotkeyApp-settings-batch1.gha.json  run-tauri-build.cmd  strokeplus-topdown-actions-batch1.json
docs/: action-list-grouping-plan.md  action-list-ui-adjustments.md  app-branding-plan.md  build-environment-setup.md  change-summary.md  codex-handoff-spec.md  gesture-action-label-overlay.md  gesture-visualization-notes.md  implementation-plan.md  keyboard-trigger-reliability-2026-07-20.md  mvp-handoff-for-chatgpt.md  openmousegesture-mod-plan.md  openmousegesture-project-status-2026-07-21.md  post-gesture-input-release-fix.md  progress-log.md  report_rebuild_from_source_20260707.md  requirements-draft-v2.md  requirements-draft.md  right-click-gesture-coexistence.md  right-trigger-gesture-commit-fix.md  runtime-verification-report-for-chatgpt.md  settings-export-import-plan.md  software-analysis.md  strokeplus-topdown-actionlist-batch1-20260703.md  test-result-summary.md  (+4 more)
source-v1.0.1/7-rate-OpenMouseGesture-b8f5357/src-tauri/: .gitignore  Cargo.toml  about.toml  build.rs  license.html  tauri.conf.json
source-v1.0.1/7-rate-OpenMouseGesture-b8f5357/src-tauri/capabilities/: default.json
source-v1.0.1/7-rate-OpenMouseGesture-b8f5357/src-tauri/src/: action_label_overlay.rs  autostart.rs  command_executor.rs  config.rs  gesture_recognizer.rs  lib.rs  main.rs  mouse_hook.rs  trajectory_renderer.rs  tray_icon.rs
(+99 files in other folders)
