[package]
name = "openmousegesture"
version = "1.0.1"
description = "GestureHotkeyApp"
authors = ["ohkat"]
edition = "2021"
license = "MIT"

[lib]
name = "openmousegesture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
once_cell = "1.19"
crossbeam-channel = "0.5"
parking_lot = "0.12"
image = "0.25"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
] }
